Sawah Terasing Ubud - Menambah paragraf terakhir

--- a/src/7. Sawah Terasering Ubud.jade
+++ b/src/7. Sawah Terasering Ubud.jade
@@ -27,13 +27,17 @@ html
         P Di pinggir jalan di desa Tegalalang Ubud, anda akan melihat warung, restoran yang menawarkan pemandangan sawah terasering Ubud. Pemandangan sawah terasering Ubud tidak seluas seperti yang di Jatiluwih. Tapi menawarkan pemandangan tersering yang unik, karena lerengnya sangat miring. Untuk dapat menikmati pemandangan sawah terasering dengan nyaman. Anda hanya perlu membeli makanan atau minuman di salah satu warung yang menghadap ke pemandangan terasering Ubud.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-         p  
-
+        H2 Sawah Terasering Ubud - Tempat Wisata Yang Harus Dikunjungi  
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P 
+        P Bagi anda yang pertama kali datang untuk liburan ke Bali, pastilah tidak akan tahu cara mencari lokasi dari sawah terasering Ubud. Agar anda tidak tersesat, ada beberapa cara yang menurut kami terbaik untuk wisatawan yang belum pernah ke Tegalalang. Dengan menggunakan jasa sewa mobil dengan supir di Bali.
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        P Jika anda menyukai pemandangan alam yang masih asri, tempat wisata Ubud tidak hanya menawarkan pemadangan sawah. Ubud juga memiliki pemadangan sungai. Sungai Ayung namanya! Sungai Ayung sangat terkenal sebagi tempat untuk aktivitas arung jeram di Ubud. Jika anda ingin tahu lebih tentang rafting Ubud, silakan klik link ini, srafting sungai Ayung Ubud.   
+     
    script(src='build/build.js')
+
+
 
 
 
