Ayung Rafting - tmbah smpai habis

--- a/src/6. Ayung Rafting.jade
+++ b/src/6. Ayung Rafting.jade
@@ -29,9 +29,29 @@ html
          p Masing-masing boat menampung 4 orang peserta ditambah 1 orang instruktur. Selama kurang lebih 2 jam anda akan mencoba mengarungi derasnya sungai Ayung yang menempuh jarak kurang lebih 12 km. Dalam perjalanan peserta dapat menikmati jeram-jeram sungai Ayung dan berfoto-foto di batu batu pinggir sungai yang latar belakangnya ukir-ukiran sepanjang ratusan meter. Hal ini mencerminkan kreatifitas seni yang tinggi dari orang Bali sehingga menjadi ciri khas dari obyek wisata rafting di sungai Ayung.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P 
+        img(src="images/arung-jeram-sungai-ayung.jpg") 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        P Bagi anak-anak yang ingin mencoba Ayung Rafting, tidak perlu khawatir karena airnya tidak terlalu deras dan jeramnya tidak menukik. Namun harus tetap ditemani orang tua masing-masing. Olahraga ini sangat seru dan menantang. Apalagi dilakukan beramai ramai bersama keluarga dan teman. 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        P Setelah mengarungi air sungai Ayung sepanjang 12 km, peserta akan sampai di stopping point. Di tempat ini disediakan tempat beristirahat, ruang ganti, kamar mandi, dan handuk gratis. Kegiatan akan dilanjutkan dengan menikmati makan siang dengan menu buffet yang telah disediakan. Obyek wisata Ayung Rafting ramai dikunjungi wisatawan dari dalam negeri maupun mancanegara. Terutama menjelang Natal, Tahun Baru, liburan sekolah dan hari libur nasional lainnya. 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Payung Rafting
+        img(src="images/Payung-Rafting-Ubud.jpg") 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Bali Adventure Rafting
+        img(src="images/bali-adventure-rafting-ubud1.jpg") 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Sobek Rafting Ayung
+        img(src="images/sobek-rafting-ayung-ubud.jpg")  
 
    script(src='build/build.js')
+
+
 
 
 
