--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Sawah Terasering Ubud
+    title Ayung Rafting
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -12,30 +12,45 @@ html
     article
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Sawah Terasering Ubud
-        img(src="images/Sawah-Terasering-Ubud.jpg" width = 400)
+        h1 Ayung Rafting
+        img(src="images/ayung-rafting-ubud.jpg" width = 500)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic') 
-        h2 Indahnya Pemandangan Hijau Persawahan       
-        p Pulau Bali, banyak memiliki areal persawahan, tapi tidak semua daerah di Bali, memiliki sawah terasering. Untuk melihat sawah terasering di Bali yang memiliki pemandangan bagus, ada di beberapa tempat. Yaitu Jatiluwih Tabanan, Pupuan Tabanan, Antosari (pantai Soka), Busung Biu Buleleng, Tirta Gangga Karangasem dan Tegalalang Ubud.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        H2 Objek Favorit Wisatawan
-        p Saat ini, anda pasti bertanya di Ubud sebelah mana, untuk dapat melihat pemadangan sawah terasering? Lokasinya bernama desa Tegalalang. Terletak di sebelah utara Ubud. Tegalalang Ubud sangat terkenal di kalangan para wisatawan dan menjadi objek favorit wisatawan. Karena letaknya sangat berdekatan dengan objek wisata di Bali yang lainnya, seperti Goa Gajah, Tampak Siring dan Kintamani.
+      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+        p Kegiatan rafting di Bali dapat dilakukan di beberapa sungai. Di sungai Telaga Waja atau lebih terkenal dengan nama rafting Telaga Waja dan sungai Ayung di Desa Payangan Ubud Bali, seperti yang anda tahu Ubud adalah salah satu objek wisata di Bali. Untuk menuju ke tempat ini menempuh waktu 1 jam dari Bandara Ngurah Rai Bali, melewati obyek wisata Kuta, objek wisata Sanur dan kota Denpasar.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Di pinggir jalan di desa Tegalalang Ubud, anda akan melihat warung, restoran yang menawarkan pemandangan sawah terasering Ubud. Pemandangan sawah terasering Ubud tidak seluas seperti yang di Jatiluwih. Tapi menawarkan pemandangan tersering yang unik, karena lerengnya sangat miring. Untuk dapat menikmati pemandangan sawah terasering dengan nyaman. Anda hanya perlu membeli makanan atau minuman di salah satu warung yang menghadap ke pemandangan terasering Ubud.
+        H2 Ayung Rafting Ubud Bali        
+        img(src="images/ayung-rafting.jpg" width = 500)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        H2 Sawah Terasering Ubud - Tempat Wisata Yang Harus Dikunjungi  
+        P Setelah sampai di tempat starting point, rafting di sungai Ayung akan segera dimulai. Para peserta akan diberi pengarahan oleh instruktur yang sudah terlatih dan berpengalaman dengan Ayung river rafting. Misalnya pengenalan alat-alat yang digunakan seperti jaket pelampung, dayung, perahu karet, posisi duduk di atas perahu, cara penyelamatkan diri jika perahu terbalik, dan hal- hal lainnya yang berkaitan dengan kenyamanan dan keselamatan peserta 
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Bagi anda yang pertama kali datang untuk liburan ke Bali, pastilah tidak akan tahu cara mencari lokasi dari sawah terasering Ubud. Agar anda tidak tersesat, ada beberapa cara yang menurut kami terbaik untuk wisatawan yang belum pernah ke Tegalalang. Dengan menggunakan jasa sewa mobil dengan supir di Bali.
+         p Masing-masing boat menampung 4 orang peserta ditambah 1 orang instruktur. Selama kurang lebih 2 jam anda akan mencoba mengarungi derasnya sungai Ayung yang menempuh jarak kurang lebih 12 km. Dalam perjalanan peserta dapat menikmati jeram-jeram sungai Ayung dan berfoto-foto di batu batu pinggir sungai yang latar belakangnya ukir-ukiran sepanjang ratusan meter. Hal ini mencerminkan kreatifitas seni yang tinggi dari orang Bali sehingga menjadi ciri khas dari obyek wisata rafting di sungai Ayung.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Jika anda menyukai pemandangan alam yang masih asri, tempat wisata Ubud tidak hanya menawarkan pemadangan sawah. Ubud juga memiliki pemadangan sungai. Sungai Ayung namanya! Sungai Ayung sangat terkenal sebagi tempat untuk aktivitas arung jeram di Ubud. Jika anda ingin tahu lebih tentang rafting Ubud, silakan klik link ini, srafting sungai Ayung Ubud.   
-     
+        img(src="images/arung-jeram-sungai-ayung.jpg") 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        P Bagi anak-anak yang ingin mencoba Ayung Rafting, tidak perlu khawatir karena airnya tidak terlalu deras dan jeramnya tidak menukik. Namun harus tetap ditemani orang tua masing-masing. Olahraga ini sangat seru dan menantang. Apalagi dilakukan beramai ramai bersama keluarga dan teman. 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        P Setelah mengarungi air sungai Ayung sepanjang 12 km, peserta akan sampai di stopping point. Di tempat ini disediakan tempat beristirahat, ruang ganti, kamar mandi, dan handuk gratis. Kegiatan akan dilanjutkan dengan menikmati makan siang dengan menu buffet yang telah disediakan. Obyek wisata Ayung Rafting ramai dikunjungi wisatawan dari dalam negeri maupun mancanegara. Terutama menjelang Natal, Tahun Baru, liburan sekolah dan hari libur nasional lainnya. 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Payung Rafting
+        img(src="images/Payung-Rafting-Ubud.jpg") 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Bali Adventure Rafting
+        img(src="images/bali-adventure-rafting-ubud1.jpg") 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Sobek Rafting Ayung
+        img(src="images/sobek-rafting-ayung-ubud.jpg")  
+
    script(src='build/build.js')
+
 
 
 
