--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Ayung Rafting
+    title Arma Museum Ubud
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -12,42 +12,34 @@ html
     article
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Ayung Rafting
-        img(src="images/ayung-rafting-ubud.jpg" width = 500)
+        h1 Arma Musemum Ubud
+        img(src="images/amu1.jpg" width = 500)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Kegiatan rafting di Bali dapat dilakukan di beberapa sungai. Di sungai Telaga Waja atau lebih terkenal dengan nama rafting Telaga Waja dan sungai Ayung di Desa Payangan Ubud Bali, seperti yang anda tahu Ubud adalah salah satu objek wisata di Bali. Untuk menuju ke tempat ini menempuh waktu 1 jam dari Bandara Ngurah Rai Bali, melewati obyek wisata Kuta, objek wisata Sanur dan kota Denpasar.
+        p Liburan di Ubud Bali, sangat di minati oleh wisatawan domestik dan mancanegara. Karena tempat wisata di Ubud, banyak menawarkan aktivitas wisata yang sangat berbeda dengan tempat wisata lain. Begitu banyak hal yang dapat anda lakukan di tempat wisata Ubud.
+        p Menonton kesenian Bali, melihat pemandangan sawah terasering di Tegalalang Ubud dan aktivitas rafting di Ubud. Dihalaman ini, kami akan menuliskan informasi mengenai wisata kesenian di Bali dengan mengunjungi Arma museum Ubud.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        H2 Ayung Rafting Ubud Bali        
-        img(src="images/ayung-rafting.jpg" width = 500)
+        img(src="images/amu.jpg" width = 500)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Setelah sampai di tempat starting point, rafting di sungai Ayung akan segera dimulai. Para peserta akan diberi pengarahan oleh instruktur yang sudah terlatih dan berpengalaman dengan Ayung river rafting. Misalnya pengenalan alat-alat yang digunakan seperti jaket pelampung, dayung, perahu karet, posisi duduk di atas perahu, cara penyelamatkan diri jika perahu terbalik, dan hal- hal lainnya yang berkaitan dengan kenyamanan dan keselamatan peserta 
+        h2 Wisata Kesenian Di Bali
+        h3 Arma Museum Ubud
+        P Disaat anda melakukan wisata di Bali dan memutuskan untuk berlibur di Ubud, tentunya anda tidak mau waktu liburan anda terbuang percuma. Bagi anda yang menyukai atau ingin tahu tentang kesenian Bali, museum seni Agung Rai atau yang lebih dikenal dengan nama Arma Museum Ubud, salah satu tempat wisata di Ubud yang harus anda kunjungi.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-         p Masing-masing boat menampung 4 orang peserta ditambah 1 orang instruktur. Selama kurang lebih 2 jam anda akan mencoba mengarungi derasnya sungai Ayung yang menempuh jarak kurang lebih 12 km. Dalam perjalanan peserta dapat menikmati jeram-jeram sungai Ayung dan berfoto-foto di batu batu pinggir sungai yang latar belakangnya ukir-ukiran sepanjang ratusan meter. Hal ini mencerminkan kreatifitas seni yang tinggi dari orang Bali sehingga menjadi ciri khas dari obyek wisata rafting di sungai Ayung.
+         p Museum ini berada di pusat jantung pariwisata Ubud, tidak akan susah buat anda untuk mencari lokasi dari Arma Museum Ubud. Alamatnya berada di Jalan Pengosekan, Ubud, Gianyar, 80571, dengan nomer telphone (0361) 974228. Untuk mendapatkan petunjuk arah, silakan klik lini ini untuk melihat peta lokasi yang lebih besar. Lokasi museum Arma.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/arung-jeram-sungai-ayung.jpg") 
+        h2 Hal Yang Menarik Di Museum Seni Agung Rai
+        p Museum seni Agung Rai di bangun di lokasi yang kontur tanah naik turun, serta memiliki nuansa alam Ubud. Yang menjadi daya tarik terbaik dari museum Arma adalah design kebun bernuansa budaya Bali.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Bagi anak-anak yang ingin mencoba Ayung Rafting, tidak perlu khawatir karena airnya tidak terlalu deras dan jeramnya tidak menukik. Namun harus tetap ditemani orang tua masing-masing. Olahraga ini sangat seru dan menantang. Apalagi dilakukan beramai ramai bersama keluarga dan teman. 
-
+        P Banyak patung yang terdapat di museum ini, selain itu anda dapat melihat Lily Pound dan tanaman angrek yang tertata rapi. Kami tahu betul, tidak semua orang menyukai melihat lukisan atau melihat pameran seni.
+        p Bagi anda yang menyukai nuansa kebun dengan design khas Bali dengan nuasa berbeda, maka tidak ada ruginya mengunjungi museum Agung Rai Ubud.
+      
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Setelah mengarungi air sungai Ayung sepanjang 12 km, peserta akan sampai di stopping point. Di tempat ini disediakan tempat beristirahat, ruang ganti, kamar mandi, dan handuk gratis. Kegiatan akan dilanjutkan dengan menikmati makan siang dengan menu buffet yang telah disediakan. Obyek wisata Ayung Rafting ramai dikunjungi wisatawan dari dalam negeri maupun mancanegara. Terutama menjelang Natal, Tahun Baru, liburan sekolah dan hari libur nasional lainnya. 
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h3 Payung Rafting
-        img(src="images/Payung-Rafting-Ubud.jpg") 
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h3 Bali Adventure Rafting
-        img(src="images/bali-adventure-rafting-ubud1.jpg") 
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h3 Sobek Rafting Ayung
-        img(src="images/sobek-rafting-ayung-ubud.jpg")  
+        P Jika anda memutuskan untuk mengunjungi musem Arma, jangan lupa untuk membawa kamera. Begitu banyak hal yang dapat anda abadikan dengan foto di tempat wisata ini.
 
    script(src='build/build.js')
 
