Goa Gajah Ubud - update sampai selesai dan tambah gambar goa gajah 2.jpg

--- a/src/10. Goa Gajah Ubud.jade
+++ b/src/10. Goa Gajah Ubud.jade
@@ -35,5 +35,20 @@ html
       section.emphatic-text(data-bespoke-backdrop='emphatic')
        p Pintu masuk melalui mulut goa hanya cukup untuk 1 orang. Diluarnya terdapat ukir &#45 ukiran dan 2 patung penjaga. Bagian dalam goa berbentuk huruf T, dengan tinggi sekitar 2 meter dan lebar 2 meter. Bagian kiri dan kanan lorong juga terdapat ceruk yang  mungkin pada jaman dahulu adalah tempat bertapa. Namun sekarang wisatawan dapat duduk maupun berbaring disana. Pada ujung barat lorong terdapat Arca Ganesha dan ujung timur lorong terdapat 3 lingga.
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+       img.big(src="images/Goa Gajah - 2.jpg")
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+       p Selain itu disekitar goa, juga terdapat patung petirtaan dengan tujuh patung widyadara &#45 widyadari yang sedang memegang air suci. Total patungnya ada tujuh, yang merupakan symbol dari tujuh sungai di India, tempat kelahiran agama Hindu dan Budha.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+       h2 Cara Terbaik Ke Tempat Wisata Goa Gajah Di Bali
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+       p Jika anda memerlukan sarana transfortasi untuk menuju tempat wisata ini, anda dapat mengunakan jasa Bali sewa mobil murah yang kami sediakan untuk anda, baik dengan supir atau tanpa supir. Bagi anda yang menginginkan kemewahan dan kenyamanan dalam kendaraan, anda dapat menggunakan jasa sewa Alphard di Bali yang kami sediakan untuk anda.
+       p Jika anda menyukai tempat wisata <a href = "http://www.rentalmobilbali.net/goa-lawah/">Goa Gajah</a> di Bali, mungkin anda juga akan tertarik mengunjungi pura Goa Lawah. Jika anda memerlukan petunjuk arah untuk menuju lokasi dari Goa Gajah, silakan gunakan peta di Google Map dengan cara mengklik link ini Lihat Peta Lebih Besar.
+
+
+
     script(src='build/build.js')
 
