Gunung Kawi Bali - habis

--- a/src/11. Gunung Kawi Bali.jade
+++ b/src/11. Gunung Kawi Bali.jade
@@ -23,4 +23,10 @@ html
       section.emphatic-text(data-bespoke-backdrop='emphatic')
        p Terdapat tiga kelompok candi di tempat wisata Gunung Kawi, yaitu kelompok candi Lima. Disebut candi lima, karena terdapat lima candi terpahat di tebing bagian timur dan kelima candi menghadap ke barat. Candi Lima didedikasikan untuk raja Udayana dan Anak Wungsu beserta keluarganya. Kelompok yang kedua bernama candi empat, letaknya di bagian barat dari tempat wisata Gunung Kawi. Candi empat didedikasikan untuk selir dari Anak Wungsu. Sedangkan di bagian barat daya terdapat 1 candi atau candi yang kesepuluh. Candi yang ke sepuluh ini di dedikasikan untuk perdana menteri yang menjabad pada pemeritahan Anak Wungsu.
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+       h2 Wisata Tempat Purbakala Di Ubud
+       p Pulau Bali memiliki banyak lokasi untuk wisata tempat purbakala, seperti Kerta Gosa Bali, Goa Gajah, pura Besakih Bali. Peminat terbanyak untuk wisata ke tempat purbakala adalah wisatawan asing. Karena itu banyak sekali tersedia jasa paket tour murah di Bali yang menawarkan rute wisata ke tempat purbakala. Salah satu contoh adalah paket tour Ubud. Jalan-jalan ke Bali tidak selalu mahal, untuk dapat jalan jalan murah ke Bali ada berbagai cara. Salah satunya adalah menggunakan jasa sewa mobil dengan supir di Bali. 
+
     script(src='build/build.js')
+
+
