--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title tirta sari legong
+    title Air Terjun Tegenungan
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -12,47 +12,48 @@ html
     article
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Tirta Sari Legong
-        img(src="images/TSL.jpg" width = 400)
+        h1 Air Terjun Tegenungan
+        img(src="images/air-terjun-tegenungan.jpg" width = 400)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Tempat wisata di Ubud Bali sangat terkenal sampai ke mancanegara, karena seni dan budayanya. Baik seni lukis, seni musik gambelan Bali dan seni tari Bali. Di Bali ada 3 jenis tari Bali yang menjadi favorit wisatawan saat berlibur. Seni tari tersebut antara lain, tari Barong, tari kecak dan tari Legong. Dihalaman ini, saya khusus menuliskan untuk pembaca, tentang seni tari Legong Tirtasari atau Tirta Sari Legong
+        h2 Lokasi Air Terjun Tegenungan Gianyar Bali
+        p Objek wisata air terjun Tegenungan Gianyar juga memiliki nama lain yaitu air terjun Kemenuh, karena berada di desa Kemunuh kabupaten Gianyar. Alamat atau Lokasi dari air terjun Kemenuh, berada di Desa Kemenuh yang merupakan wilayah Kecamatan Sukawati, Kabupaten Gianyar. Untuk melihat lokasi pasti dan mengetahui jalan menuju air terjun Tegenungan Gianyar, silakan klik link ini lokasi air terjun Kemenuh.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Salah satu objek wisata di Bali terbaik untuk menonton seni tari klasik Bali seperti tari Legong adalah Ubud. Di Ubud ada banyak tempat yang mementaskan seni tari Legong Bali dan yang terbaik menurut saya pribadi adalah pementasan grup tari Tirta Sari.
+        p Dilihat dari peta, maka lokasi air terjun Tegenungan adalah lokasi air terjun yang terdekat dengan Bali Selatan. Sebagian besar air terjun di Bali berlokasi di daerah pengunungan atau daerah yang memiliki dataran tinggi, tetapi air terjun Tegenungan, satu-satunya yang berada di dataran rendah.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/TSL1.jpg")
-        h3 Sejarah Grup Tari Tirta Sari Peliatan Ubud
-        p  Grup tari Tirta Sari dibentuk pada tahun 1978 oleh Anak Agung Gde Mandera, yang berasal dari Puri Kaleran Peliatan Ubud. Tujuan awal dari Anak Agung Gde Mandera membentuk group tari Tirta Sari, adalah untuk melestarikan seni tari Bali dan seni musik klasik yang ada di Peliatan Ubud.
+        P Jika anda menginap di kawasan wisata Kuta, untuk mencapai lokasi dari air terjun Kemenuh akan ditempuh dalam kurun waktu 1 jam, tentunya jalan dalam kondisi normal atau tidak macet.
+         P Jaraknya adalah 34 kilometer, untuk melihat peta rute dari Kuta silakan klik link ini, rute ke air terjun Kemenuh dari Kuta.
+         P Lokasinya tidak berada di tepi jalan, agar anda menemukan lokasi dari air terjun Kemenuh, anda perlu menuruni anak tangga yang jumlahnya ratusan dari tempat parkir, sampai anda menemukan bibir sungai Petanu.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah
+        p Untuk menuruni ratusan anak tangga, tidak begitu terasa capeknya. Tapi saat anda harus kembali ke tempat parkir kendaraan maka anda harus menaiki anak tangga yang jumlahnya ratusan.
+         P Di sinilah ketahanan stamina anda di uji. Jadi jika anda kurang kuat untuk menaiki anak tangga, kami tidak sarankan anda untuk mengunjungi tempat wisata air terjun ini.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Lambat laun grup tari Tirta Sari mulai berkembang dengan menyempurnakan musik klasik khas Bali. Guruh Soekarno Putra pada tahun 1982, mengajak grup Tirta Sari untuk berkolaborasi dengan kelompok tari Swara Marhardika dan memadukan musik klasik Bali dengan musik kontemporer. Perpaduan antara kelompok tari Tirta Sari dengan kelompok tari Swara Marhardika,  dipentaskan pertama kali untuk upacara pembukaan Jakarta Fair.
+        p Air terjun Tegenungan, memiliki tinggi kira-kira 4 meter, tapi memiliki debit air yang lumayan banyak. Air di lokasi air terjun Kemenuh sangat jernih dan cocok buat anda yang sekedar ingin bermain air atau mandi. Di lokasi air terjun ini, anda juga dapat melihat pura dan pancoran air yang berasal dari mata air.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Semenjak itu, kelompok tari Tirta Sari, mulai dikenal dan selalu diminta untuk mengadakan pertunjukan tari di tingkat resmi negara dan kegiatan sosial. Saat ini kelompok tari Tirta Sari, dipimpin oleh Anak Agung Gde Oka Dalem, secara rutin mengadakan pertunjukan seni tari klasik Bali untuk para wisatawan yang ingin menonton tari klasik Bali.
+        img(src="images/pancoran-air-terjun-kemenuh.jpg" width=500)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/TSL2.jpg")
-        h3 Kelompok Legong Lasem Tirta Sari
-        p  Kelompok tari Tirta Sari juga dikenal dengan nama Legong Lasem Tirta Sari. Grup tari ini juga dinamakan Legong Lasem, karena mementaskan tari Legong Bali yang paling lengkap atau disebut dengan nama Legong Lasem. Jumlah anggota kelompok tari Tirta Sari terdiri dari 37 musisi dan 21 penari.
+        h2 Fasilitas, Tiket Masuk & Tempat Parkir
+        p Objek wisata air terjun Tegenungan kurang mendapat perawatan, jadi terkesan kurang rapi dan bersih. Hal ini akan terlihat pada saat anda sudah sampai di tempat parkir kendaraan. Di sepanjang areal sungai, juga banyak pohon yang telah ditebang dan ada sampah yang berserakan.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Untuk tarian Legong di Bali jenis gambelan (alat musik tradisional khas Bali) yang digunakan diberi nama gambelan Semar Pegulingan. Ada beberapa jenis tarian Legong Bali yang dipentaskan oleh kelompok tari Tirta Sari seperti:
-        ulcircle
-          li Legong Lasem (versi lengkap)
-          li Legong Semaradana
-          li Legong Kuntir
-          li Legong Jobog
-          li Legong Pelayon
-          li Legong Kuntul
-          li Legong Untung Surapati (tari kreasi baru)
+        p Khusus di areal parkir, anda akan melihat adanya warung-warung sederhana yang menjual makanan dan minuman. Untuk tiket masuk anda akan tidak akan dikenakan biaya. Dulu saat di tempat ini ada wisata bunjee jumping, anda akan dikenakan biaya tiket masuk sebesar Rp 4.000 untuk dewasa dan anak-anak sebesar Rp 2.000. Wisata bunjee jumping saat ini sudah tidak ada lagi di lokasi wisata air terjun Kemenuh.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Transfortasi Wisata Di Bali
+        p Di objek wisata air terjun Tegenungan tidak ada sarana transfortasi umum, jadi anda harus membawa kendaraan anda sendiri atau dengan mencari penyedia jasa Bali rent car. Bagi anda yang tidak terbiasa mengemudi di jalanan yang agak rusak dan kecil, maka kami sarankan anda untuk mencari jasa sewa mobil di Bali dengan supir.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Objek wisata air terjun Tegenungan sangat dekat dengan lokasi dari pasar seni Sukawati, di pasar ini anda dapat membeli beranekaragam oleh-oleh khas Bali yang dijual murah. Jika anda pintar dalam menawar, maka anda akan jauh mendapatkan harga murah untuk oleh-oleh khas Bali.
 
 
    script(src='build/build.js')
+
 
 
 
