Tirta Sari Legong - update file sampai selesai dan tambah image Tirta Sari Legong 1.jpg

--- a/src/13.Tirta sari Legong.jade
+++ b/src/13.Tirta sari Legong.jade
@@ -41,7 +41,7 @@ html
         p  Kelompok tari Tirta Sari juga dikenal dengan nama Legong Lasem Tirta Sari. Grup tari ini juga dinamakan Legong Lasem, karena mementaskan tari Legong Bali yang paling lengkap atau disebut dengan nama Legong Lasem. Jumlah anggota kelompok tari Tirta Sari terdiri dari 37 musisi dan 21 penari.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Untuk tarian Legong di Bali jenis gambelan (alat musik tradisional khas Bali) yang digunakan diberi nama gambelan Semar Pegulingan. Ada beberapa jenis tarian Legong Bali yang dipentaskan oleh kelompok tari Tirta Sari seperti:
+        P.bullet Untuk tarian Legong di Bali jenis gambelan (alat musik tradisional khas Bali) yang digunakan diberi nama gambelan Semar Pegulingan. Ada beberapa jenis tarian Legong Bali yang dipentaskan oleh kelompok tari Tirta Sari seperti:
         ulcircle
           li Legong Lasem (versi lengkap)
           li Legong Semaradana
@@ -51,13 +51,47 @@ html
           li Legong Kuntul
           li Legong Untung Surapati (tari kreasi baru)
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Jadwal & Harga Tiket Pertunjukan Tirta Sari Legong
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p.bullet Jika anda ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.
+        ulcircle
+          li Setiap hari Jumat
+          li Jam 19:30 &#45 21:00
+          li Harga tiket pertunjukan tari Legong Tirtasari, Rp 100.000 / orang
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3.bullet Program Pertunjukan Tirta Sari Legong
+        ol
+          <li style="text-align: left;"> Musik instrumental pembuka, judul musik Sekar Gendot</li>
+          <li style="text-align: left;"> Tari Puspa Mekar (tarian Selamat Datang)</li>
+          <li style="text-align: left;"> Tari Lambang Sari (tarian Selamat Datang)</li>
+          <li style="text-align: left;"> Tari Baris (tarian prajurit penari sendiri)</li>
+          <li style="text-align: left;"> Tari Kebyar Duduk</li>
+          <li style="text-align: left;"> Tari Legong Lasem</li>
+          <li style="text-align: left;"> Tari Legong Jobog</li>
+          <li style="text-align: left;"> Tari Legong Kuntir</li>
+          <li style="text-align: left;"> Tari Teruna Jaya</li>
+          <li style="text-align: left;"> Tari Oleg Tambulilimgan</li>
+          <li style="text-align: left;"> Tari Barong Taru Pramana</li>
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Program pertujukan tari kelompok Tirta Sari Legong dapat berubah sewaktu-waktu, semuanya tergantung dari ketersediaan penari saat itu. Jadi bisa saja saat anda berkunjung menonton kelompok Tirta Sari Legong di Peliatan, salah satu tarian tidak di pertunjukan.
+        p Jika anda ingin menonton pertujukan Tirta Sari Legong tapi tidak pada hari Jumat, anda dapat menonton pertunjukan tari Tirta Sari Legong di Hotel Oberoi Seminyak setiap sabtu. Kelompok tari Legong Lasem Tirta Sari, telah melakukan pertujukan di Hotel Oberoi Seminyak setiap sabtu, hampir dalam kurun waktu 25 tahun.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Cara Menuju Lokasi Pertujukan Tari Legong Lasem Tirta Sari
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Tirta Sari Legong 1.jpg")
+        p Untuk menuju lokasi Balerung Stage Peliatan ada banyak cara yang dapat anda lakukan. Jika anda menginap di Ubud selama liburan di Bali, tentunya tidak akan susah untuk mencari lokasi Balerung Stage Peliatan. Menggunakan taksi adakah cara terbaik jika anda menginap di Ubud.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Bagi yang menginap di kawasan <a href = "http://www.rentalmobilbali.net/tag/wisata-di-bali/">wisata di Bali</a> yang lain seperti <a href = "http://www.rentalmobilbali.net/tempat-wisata-di-bali-kuta/">objek wisata Kuta</a>, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika anda menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, anda dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu anda sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Selain itu, jika anda menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.
+
 
    script(src='build/build.js')
-
-
-
-
-
-
-
-
