--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Air Terjun Tegenungan
+    title tirta sari legong
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -12,53 +12,86 @@ html
     article
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Air Terjun Tegenungan
-        img(src="images/air-terjun-tegenungan.jpg" width = 400)
+        h1 Tirta Sari Legong
+        img(src="images/TSL.jpg" width = 400)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        h2 Lokasi Air Terjun Tegenungan Gianyar Bali
-        p Objek wisata air terjun Tegenungan Gianyar juga memiliki nama lain yaitu air terjun Kemenuh, karena berada di desa Kemunuh kabupaten Gianyar. Alamat atau Lokasi dari air terjun Kemenuh, berada di Desa Kemenuh yang merupakan wilayah Kecamatan Sukawati, Kabupaten Gianyar. Untuk melihat lokasi pasti dan mengetahui jalan menuju air terjun Tegenungan Gianyar, silakan klik link ini lokasi air terjun Kemenuh.
+        p Tempat wisata di Ubud Bali sangat terkenal sampai ke mancanegara, karena seni dan budayanya. Baik seni lukis, seni musik gambelan Bali dan seni tari Bali. Di Bali ada 3 jenis tari Bali yang menjadi favorit wisatawan saat berlibur. Seni tari tersebut antara lain, tari Barong, tari kecak dan tari Legong. Dihalaman ini, saya khusus menuliskan untuk pembaca, tentang seni tari Legong Tirtasari atau Tirta Sari Legong
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Dilihat dari peta, maka lokasi air terjun Tegenungan adalah lokasi air terjun yang terdekat dengan Bali Selatan. Sebagian besar air terjun di Bali berlokasi di daerah pengunungan atau daerah yang memiliki dataran tinggi, tetapi air terjun Tegenungan, satu-satunya yang berada di dataran rendah.
+        p Salah satu objek wisata di Bali terbaik untuk menonton seni tari klasik Bali seperti tari Legong adalah Ubud. Di Ubud ada banyak tempat yang mementaskan seni tari Legong Bali dan yang terbaik menurut saya pribadi adalah pementasan grup tari Tirta Sari.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Jika anda menginap di kawasan wisata Kuta, untuk mencapai lokasi dari air terjun Kemenuh akan ditempuh dalam kurun waktu 1 jam, tentunya jalan dalam kondisi normal atau tidak macet.
-         P Jaraknya adalah 34 kilometer, untuk melihat peta rute dari Kuta silakan klik link ini, rute ke air terjun Kemenuh dari Kuta.
-         P Lokasinya tidak berada di tepi jalan, agar anda menemukan lokasi dari air terjun Kemenuh, anda perlu menuruni anak tangga yang jumlahnya ratusan dari tempat parkir, sampai anda menemukan bibir sungai Petanu.
+        img.big(src="images/TSL1.jpg")
+        h3 Sejarah Grup Tari Tirta Sari Peliatan Ubud
+        p  Grup tari Tirta Sari dibentuk pada tahun 1978 oleh Anak Agung Gde Mandera, yang berasal dari Puri Kaleran Peliatan Ubud. Tujuan awal dari Anak Agung Gde Mandera membentuk group tari Tirta Sari, adalah untuk melestarikan seni tari Bali dan seni musik klasik yang ada di Peliatan Ubud.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Untuk menuruni ratusan anak tangga, tidak begitu terasa capeknya. Tapi saat anda harus kembali ke tempat parkir kendaraan maka anda harus menaiki anak tangga yang jumlahnya ratusan.
-         P Di sinilah ketahanan stamina anda di uji. Jadi jika anda kurang kuat untuk menaiki anak tangga, kami tidak sarankan anda untuk mengunjungi tempat wisata air terjun ini.
+        p Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Air terjun Tegenungan, memiliki tinggi kira-kira 4 meter, tapi memiliki debit air yang lumayan banyak. Air di lokasi air terjun Kemenuh sangat jernih dan cocok buat anda yang sekedar ingin bermain air atau mandi. Di lokasi air terjun ini, anda juga dapat melihat pura dan pancoran air yang berasal dari mata air.
+        P Lambat laun grup tari Tirta Sari mulai berkembang dengan menyempurnakan musik klasik khas Bali. Guruh Soekarno Putra pada tahun 1982, mengajak grup Tirta Sari untuk berkolaborasi dengan kelompok tari Swara Marhardika dan memadukan musik klasik Bali dengan musik kontemporer. Perpaduan antara kelompok tari Tirta Sari dengan kelompok tari Swara Marhardika,  dipentaskan pertama kali untuk upacara pembukaan Jakarta Fair.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/pancoran-air-terjun-kemenuh.jpg" width=500)
+        P Semenjak itu, kelompok tari Tirta Sari, mulai dikenal dan selalu diminta untuk mengadakan pertunjukan tari di tingkat resmi negara dan kegiatan sosial. Saat ini kelompok tari Tirta Sari, dipimpin oleh Anak Agung Gde Oka Dalem, secara rutin mengadakan pertunjukan seni tari klasik Bali untuk para wisatawan yang ingin menonton tari klasik Bali.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Fasilitas, Tiket Masuk & Tempat Parkir
-        p Objek wisata air terjun Tegenungan kurang mendapat perawatan, jadi terkesan kurang rapi dan bersih. Hal ini akan terlihat pada saat anda sudah sampai di tempat parkir kendaraan. Di sepanjang areal sungai, juga banyak pohon yang telah ditebang dan ada sampah yang berserakan.
+        img.big(src="images/TSL2.jpg")
+        h3 Kelompok Legong Lasem Tirta Sari
+        p  Kelompok tari Tirta Sari juga dikenal dengan nama Legong Lasem Tirta Sari. Grup tari ini juga dinamakan Legong Lasem, karena mementaskan tari Legong Bali yang paling lengkap atau disebut dengan nama Legong Lasem. Jumlah anggota kelompok tari Tirta Sari terdiri dari 37 musisi dan 21 penari.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Khusus di areal parkir, anda akan melihat adanya warung-warung sederhana yang menjual makanan dan minuman. Untuk tiket masuk anda akan tidak akan dikenakan biaya. Dulu saat di tempat ini ada wisata bunjee jumping, anda akan dikenakan biaya tiket masuk sebesar Rp 4.000 untuk dewasa dan anak-anak sebesar Rp 2.000. Wisata bunjee jumping saat ini sudah tidak ada lagi di lokasi wisata air terjun Kemenuh.
+        P.bullet Untuk tarian Legong di Bali jenis gambelan (alat musik tradisional khas Bali) yang digunakan diberi nama gambelan Semar Pegulingan. Ada beberapa jenis tarian Legong Bali yang dipentaskan oleh kelompok tari Tirta Sari seperti:
+        ulcircle
+          li Legong Lasem (versi lengkap)
+          li Legong Semaradana
+          li Legong Kuntir
+          li Legong Jobog
+          li Legong Pelayon
+          li Legong Kuntul
+          li Legong Untung Surapati (tari kreasi baru)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Transfortasi Wisata Di Bali
-        p Di objek wisata air terjun Tegenungan tidak ada sarana transfortasi umum, jadi anda harus membawa kendaraan anda sendiri atau dengan mencari penyedia jasa Bali rent car. Bagi anda yang tidak terbiasa mengemudi di jalanan yang agak rusak dan kecil, maka kami sarankan anda untuk mencari jasa sewa mobil di Bali dengan supir.
+        h2 Jadwal & Harga Tiket Pertunjukan Tirta Sari Legong
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Objek wisata air terjun Tegenungan sangat dekat dengan lokasi dari pasar seni Sukawati, di pasar ini anda dapat membeli beranekaragam oleh-oleh khas Bali yang dijual murah. Jika anda pintar dalam menawar, maka anda akan jauh mendapatkan harga murah untuk oleh-oleh khas Bali.
+        p.bullet Jika anda ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.
+        ulcircle
+          li Setiap hari Jumat
+          li Jam 19:30 &#45 21:00
+          li Harga tiket pertunjukan tari Legong Tirtasari, Rp 100.000 / orang
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3.bullet Program Pertunjukan Tirta Sari Legong
+        ol
+          <li style="text-align: left;"> Musik instrumental pembuka, judul musik Sekar Gendot</li>
+          <li style="text-align: left;"> Tari Puspa Mekar (tarian Selamat Datang)</li>
+          <li style="text-align: left;"> Tari Lambang Sari (tarian Selamat Datang)</li>
+          <li style="text-align: left;"> Tari Baris (tarian prajurit penari sendiri)</li>
+          <li style="text-align: left;"> Tari Kebyar Duduk</li>
+          <li style="text-align: left;"> Tari Legong Lasem</li>
+          <li style="text-align: left;"> Tari Legong Jobog</li>
+          <li style="text-align: left;"> Tari Legong Kuntir</li>
+          <li style="text-align: left;"> Tari Teruna Jaya</li>
+          <li style="text-align: left;"> Tari Oleg Tambulilimgan</li>
+          <li style="text-align: left;"> Tari Barong Taru Pramana</li>
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Program pertujukan tari kelompok Tirta Sari Legong dapat berubah sewaktu-waktu, semuanya tergantung dari ketersediaan penari saat itu. Jadi bisa saja saat anda berkunjung menonton kelompok Tirta Sari Legong di Peliatan, salah satu tarian tidak di pertunjukan.
+        p Jika anda ingin menonton pertujukan Tirta Sari Legong tapi tidak pada hari Jumat, anda dapat menonton pertunjukan tari Tirta Sari Legong di Hotel Oberoi Seminyak setiap sabtu. Kelompok tari Legong Lasem Tirta Sari, telah melakukan pertujukan di Hotel Oberoi Seminyak setiap sabtu, hampir dalam kurun waktu 25 tahun.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Cara Menuju Lokasi Pertujukan Tari Legong Lasem Tirta Sari
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Tirta Sari Legong 1.jpg")
+        p Untuk menuju lokasi Balerung Stage Peliatan ada banyak cara yang dapat anda lakukan. Jika anda menginap di Ubud selama liburan di Bali, tentunya tidak akan susah untuk mencari lokasi Balerung Stage Peliatan. Menggunakan taksi adakah cara terbaik jika anda menginap di Ubud.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Bagi yang menginap di kawasan <a href = "http://www.rentalmobilbali.net/tag/wisata-di-bali/">wisata di Bali</a> yang lain seperti <a href = "http://www.rentalmobilbali.net/tempat-wisata-di-bali-kuta/">objek wisata Kuta</a>, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika anda menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, anda dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu anda sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Selain itu, jika anda menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.
 
 
    script(src='build/build.js')
-
-
-
-
-
-
-
-
-
